--- a/src/components/locationwarning/LocationWarning.css
+++ b/src/components/locationwarning/LocationWarning.css
@@ -20,7 +20,7 @@
   transform: translate(-50%, 20px);
 }
 
-.close-button {
+.location-warning .close-button {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -30,7 +30,7 @@
   cursor: pointer;
 }
 
-.message {
+.location-warning .message {
   font-size: 14px;
   color: #333;
   margin: 0;
