--- a/src/components/map/Map.module.css
+++ b/src/components/map/Map.module.css
@@ -26,3 +26,19 @@
   top: 15px;
   right: 170px;
 }
+
+.mapContainer {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+/* GoogleMapコンポーネントのコンテナスタイル */
+.mapContainer > div {
+  width: 100% !important;
+  height: 100% !important;
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+}
