--- a/src/components/map/MapControls.module.css
+++ b/src/components/map/MapControls.module.css
@@ -1,3 +1,4 @@
+/* コントロールボタンを含むコンテナのスタイルを定義します。 */
 .mapControlsContainer {
   position: absolute;
   top: 10px;
@@ -8,6 +9,7 @@
   z-index: 1000;
 }
 
+/* 各コントロールボタンのスタイルを定義します。 */
 .mapControlButton {
   background: white;
   border: none;
@@ -17,6 +19,7 @@
   cursor: pointer;
 }
 
+/* コントロールボタン内の画像のスタイルを定義します。 */
 .mapControlButton img {
   width: 24px;
   height: 24px;
