--- a/src/components/loadingfallback/LoadingFallback.css
+++ b/src/components/loadingfallback/LoadingFallback.css
@@ -4,7 +4,8 @@
   /* フレックスボックスを使用して中央揃え */
   justify-content: center;
   /* 水平方向に中央揃え */
-  align-items: flex-end; /* 下揃えに変更 */
+  align-items: flex-end;
+  /* 下揃えに変更 */
   position: fixed;
   /* 画面に固定 */
   top: 0;
@@ -15,14 +16,20 @@
   /* 幅を100%に設定 */
   height: 100%;
   /* 高さを100%に設定 */
-  background-image: url('../../utils/images/row1.png'); /* 背景画像を設定 */
-  background-size: contain; /* 背景画像を全体表示 */
-  background-position: center; /* 背景画像を中央に配置 */
-  background-repeat: no-repeat; /* 背景画像を繰り返さない */
+  background-image: url('../../utils/images/row1.png');
+  /* 背景画像を設定 */
+  background-size: contain;
+  /* 背景画像を全体表示 */
+  background-position: center;
+  /* 背景画像を中央に配置 */
+  background-repeat: no-repeat;
+  /* 背景画像を繰り返さない */
   z-index: 1000;
   /* 重なり順を最前面に設定 */
   transition: opacity 1s ease-in, pointer-events 1s ease-in;
   /* アニメーションの設定 */
+  background-color: #90daee;
+  /* 背景色を設定します。 */
 }
 
 /* 非表示時のスタイル */
@@ -47,7 +54,8 @@
   /* フェードインアニメーションを設定 */
   position: relative;
   /* 相対位置を設定 */
-  bottom: 100px; /* 画面下部から100px上に配置 */
+  bottom: 100px;
+  /* 画面下部から100px上に配置 */
 }
 
 /* ローディングスピナーのスタイル */
@@ -64,7 +72,8 @@
   /* ボーダーを丸くする */
   animation: spin 1s linear infinite;
   /* スピンアニメーションを設定 */
-  margin: 0 auto 20px auto; /* 上下の余白を0、左右の余白を自動に設定してセンター配置 */
+  margin: 0 auto 20px auto;
+  /* 上下の余白を0、左右の余白を自動に設定してセンター配置 */
 }
 
 /* フェードインアニメーションの定義 */
