--- a/src/components/filterpanel/FilterPanel.css
+++ b/src/components/filterpanel/FilterPanel.css
@@ -3,7 +3,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  transition:
+    transform 0.3s ease-in-out,
+    opacity 0.3s ease-in-out;
   transform: translateY(-100%);
   opacity: 0;
   position: fixed;
