--- a/src/components/mapcontrols/MapControls.module.css
+++ b/src/components/mapcontrols/MapControls.module.css
@@ -26,7 +26,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 0.2s ease, transform 0.1s ease;
+  transition:
+    background-color 0.2s ease,
+    transform 0.1s ease;
 }
 
 /* コントロールボタン内の画像のスタイルを定義します。 */
