--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
    * グローバルカラー変数 - すべての色の基本となる定義
    * =============================================== */
   --color-primary: #4a6da7;
-  --color-primary-light: #6b8bc5;
+  --color-primary-light: #8ad8ec;
   --color-primary-dark: #3b5998;
   --color-primary-focus: #4285f4;
 
