--- a/src/components/mapcontrols/MapControls.module.css
+++ b/src/components/mapcontrols/MapControls.module.css
@@ -19,7 +19,7 @@
 .mapControlButton {
   background: var(--bg-color);
   border: none;
-  padding: 5px;
+  padding: 0;
   border-radius: 5px;
   box-shadow: 0 2px 4px var(--color-shadow);
   cursor: pointer;
@@ -33,8 +33,8 @@
 
 /* コントロールボタン内の画像のスタイルを定義します。 */
 .mapControlButton img {
-  width: 24px;
-  height: 24px;
+  width: 36px;
+  height: 36px;
 }
 
 /* コントロールボタンのホバー状態 */
