--- a/src/App.module.css
+++ b/src/App.module.css
@@ -28,7 +28,7 @@
 }
 
 /* マップコンテナ内の要素 */
-.mapContainer>div {
+.mapContainer > div {
   width: 100%;
   height: 100%;
 }
@@ -125,7 +125,7 @@
 }
 
 .statusIcon {
-  color: #4CAF50;
+  color: #4caf50;
   font-weight: bold;
 }
 
